--- a/simon css.css
+++ b/simon css.css
@@ -1,6 +1,69 @@
 body {
-    text-align: center;
+    /* Align items horizontally with flex */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
 }
+
+header{
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    /* background-color: darkcyan; */
+}
+
+.layout-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 90%; /* Keep layout responsive */
+    margin-top: 2rem;
+}
+
+/* From Uiverse.io by vinodjangid07 */ 
+#checkbox {
+    display: none;
+  }
+  
+  .switch {
+    position: relative;
+    width: fit-content;
+    padding: 10px 20px;
+    background-color: rgb(46, 46, 46);
+    border-radius: 50px;
+    z-index: 1;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+    font-size: 0.9em;
+    font-weight: 600;
+    transition: all 0.3s;
+  }
+  .switch svg path {
+    fill: white;
+  }
+  #checkbox:checked + .switch {
+    background-color: rgb(174, 0, 255);
+    box-shadow: 0px 0px 40px rgba(174, 0, 255, 0.438);
+  }
+  
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 45%; /* Adjust to fit neatly on the left */
+}
+
+.line1,
+.line2 {
+    display: flex;
+    justify-content: flex-start;
+}
+
 .btn {
     height: 200px;
     width: 200px;
@@ -9,29 +72,35 @@ body {
     margin: 2.5rem;
 }
 
-.btn-container{
-    display: flex;
-    justify-content: center;
-}
-
-
-.yellow{
-    background-color: yellow;
-}
-.red{
+.red {
     background-color: red;
 }
-.blue{
-    background-color: blue;
 
+.yellow {
+    background-color: yellow;
 }
-.green{
+
+.blue {
+    background-color: blue;
+}
+
+.green {
     background-color: green;
 }
-.flash{
+
+.flash {
     background-color: white;
 }
 
-.userflash{
+.userflash {
     background-color: brown;
+}
+
+.instructions {
+    width: 45%; /* Keep instructions on the right */
+    margin-left: 2rem; /* Add space between button container and instructions */
+}
+
+h2 {
+    text-align: left;
 }
